--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Short HTML CSS Template</title>
+        <title>Nguyen Xuan Thinh</title>
 <!--
 Short HTML Template
 http://www.templatemo.com/tm-502-short
