--- a/index.html
+++ b/index.html
@@ -189,14 +189,14 @@ http://www.templatemo.com/tm-502-short
                             <p>
                               <b>Description:</b><br>
                               <p>
-                                A Casual Game where you control a 3D stickman and move freely in a map. <br>
+                                A Casual Game where you control a 3D stickman and move freely in a map.
                                 Move your character by sliding your finger over your smartphone's screen in whichever direction you prefer. <br>
                                 You will have to fight against many enemies and kill them by using different weapons. The more enemies you killed, the bigger you will become.
                               </p>
                               <b>Knowlege:</b><br>
                               <ul>
                                 <li>
-                                  Physics 3D, NavMesh, State Machine, Scriptable Object, Resources.Load <br>
+                                  Physics 3D, NavMesh, State Machine, Scriptable Object, Resources.Load
                                   Component Cache, Json Data, Asset Joystick, Asset Offscreen Target Indicator
                                 </li>
                                 <li>Design pattern: Singleton, Observer, Object Pooling</li>
